ubuntu/roles/firewall-ruleset-deploy/files/catsith.asininetech.net.rules.v6
# Generated by ip6tables-save v1.6.1 on Thu Aug 22 02:22:34 2019
*nat
:PREROUTING ACCEPT [39130:3552329]
:INPUT ACCEPT [38219:3476328]
:OUTPUT ACCEPT [649972:61144068]
:POSTROUTING ACCEPT [166603:14761332]
COMMIT
# Completed on Thu Aug 22 02:22:34 2019
# Generated by ip6tables-save v1.6.1 on Thu Aug 22 02:22:34 2019
*security
:INPUT ACCEPT [3063254:3242714018]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2710431:1187736120]
COMMIT
# Completed on Thu Aug 22 02:22:34 2019
# Generated by ip6tables-save v1.6.1 on Thu Aug 22 02:22:34 2019
*raw
:PREROUTING ACCEPT [3069715:3243124325]
:OUTPUT ACCEPT [3197462:1234338936]
COMMIT
# Completed on Thu Aug 22 02:22:34 2019
# Generated by ip6tables-save v1.6.1 on Thu Aug 22 02:22:34 2019
*mangle
:PREROUTING ACCEPT [3069715:3243124325]
:INPUT ACCEPT [3069675:3243120621]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3197463:1234339228]
:POSTROUTING ACCEPT [2710434:1187736892]
COMMIT
# Completed on Thu Aug 22 02:22:34 2019
# Generated by ip6tables-save v1.6.1 on Thu Aug 22 02:22:34 2019
*filter
:INPUT DROP [6421:406603]
:FORWARD DROP [0:0]
:OUTPUT DROP [487029:46602336]
:icmp_in - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4949 -j ACCEPT
-A INPUT -p ipv6-icmp -j icmp_in
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 135 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 136 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A icmp_in -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
COMMIT
# Completed on Thu Aug 22 02:22:34 2019
