ubuntu/roles/firewall-ruleset-deploy/files/deirdre.asininetech.net.rules.v4
# Completed on Thu Aug 22 02:25:12 2019
# Generated by iptables-save v1.6.1 on Thu Aug 22 02:25:12 2019
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT DROP
-A INPUT -s 159.149.133.66/32 -m comment --comment "Scrapy bot from University of Milan" -j DROP
-A INPUT -s 185.6.8.3/32 -m comment --comment "domaincrawler.com aggressive crawler/bot" -j DROP
-A INPUT -s 185.6.8.7/32 -m comment --comment "domaincrawler.com aggressive crawler/bot" -j DROP
-A INPUT -s 173.244.135.0/24 -m comment --comment "infegy data collection" -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4949 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -p udp -m udp --dports 67,68 -j ACCEPT
COMMIT
# Completed on Thu Aug 22 02:25:12 2019
