ubuntu/roles/firewall-ruleset-deploy/files/namshiel.asininetech.net.rules.v4
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp --icmp-type ping -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 5665 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9200,9300 -s 96.126.113.89/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9200,9300 -s 10.1.0.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 655 -j ACCEPT
-A INPUT -p udp -m udp --dport 655 -j ACCEPT
COMMIT
