ubuntu/roles/firewall-ruleset-deploy/files/waldo.asininetech.net.rules.v4
# Generated by iptables-save v1.6.1 on Wed Jun  5 07:00:25 2019
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT DROP
-A INPUT -s 173.244.135.0/24 -m comment --comment "infegy data collection" -j DROP
-A INPUT -s 103.114.191.0/24 -m comment --comment "1776 Solutions, kiwifarms" -j DROP
-A INPUT -s 110.240.0.0/12 -m comment --comment "Bytespider crawler, aggressive" -j DROP
-A INPUT -s 111.224.0.0/14 -m comment --comment "Bytespider crawler, aggressive" -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4949 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5665 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
COMMIT
# Completed on Wed Jun  5 07:00:25 2019
